Cómo logearse, autentificarse con facebook, mandar gif y  mandar fotos

--- a/index.html
+++ b/index.html
@@ -4,6 +4,47 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div>
+            <!--Login-->
+            <div id="loggedIn">
+                <p id="username"></p>
+                <input id="logout" onclick="logoutWithFirebase()" type="button" value="LOGOUT">
+            </div>
+            <!--Autentificación con mail-->
+            <div id="loggedOut">
+                <input id="email" type="email">
+                <input id="password" type="password">
+                <input id="registerButton" onclick="registerWithFirebase()" type="button" value="REGISTER">
+                <input id="loginButton" onclick="loginWithFirebase()" type="button" value="LOGIN">
+            <!--Autentificación con facebook-->
+                <input id="facebookButton" onclick="facebookLoginWithFirebase()" type="button" value="FACEBOOK LOGIN">
+            </div>
+            <!--Contenedor de gif-->                                    
+            <div id="gifContainer">
+            </div>
+            <!--Opción para enviar gif-->            
+            <div>
+                <input id="gifArea" type="text"> <input id="sendGif" onclick="sendGif()" type="button" value="SEND GIF">                                        
+            </div>
+            <!--Opción para enviar imagen-->
+            <div>
+                <input id="photoFileSelector" type="file"> <input id="sendPhoto" type="button" onclick="sendPhotoToStorage()" value="SEND PHOTO">
+            </div>
+        </div>
+        <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
+        <script>
+            // Initialize Firebase
+             var config = {
+                apiKey: "AIzaSyB7EqI3joN-qEIWRQ5Qjxkkz3A-3SxHs2Y",
+                authDomain: "gitchatlaboratoria.firebaseapp.com",
+                databaseURL: "https://gitchatlaboratoria.firebaseio.com",
+                projectId: "gitchatlaboratoria",
+                storageBucket: "gitchatlaboratoria.appspot.com",
+                messagingSenderId: "296433186877"
+             };
+            firebase.initializeApp(config);
+        </script>
+        </script>
         <script src="app.js"></script>
     </body>
 </html>
